--- a/views/index.html
+++ b/views/index.html
@@ -29,10 +29,12 @@
 	<!--<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>-->
 
 	<!--Local styles-->
+	<link rel="stylesheet" href="styles/normalize.css/normalize.css">
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="styles/front-page.css">
 	<link rel="stylesheet" href="styles/tickets-board.css">
 	<link rel="stylesheet" href="styles/submit-form.css">
+	<link rel="stylesheet" href="styles/single-ticket-page.css">
 
 </head>
 <body ng-app="TicketsSupportApp">
