--- a/views/index.html
+++ b/views/index.html
@@ -76,6 +76,7 @@
 
 	<!--Services-->
 	<script src="angular/services/checkTicketSrv.js"></script>
+	<script src="angular/services/formMultipartUploadSrv.js"></script>
 
 </body>
 </html>
