add file upload handing

--- a/public/angular/views/submitForm.html
+++ b/public/angular/views/submitForm.html
@@ -109,7 +109,7 @@
                     Please attach evidence or supplement material:
                 </label>
                 <div class="col-md-8">
-                    <input type="file" id="file" file-model="newTicket.file"/>
+                    <input type="file" id="file" file-model="newTicketFiles"/>
                 </div>
             </div>
             <div class="form-group">
