--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
 	<header class="container-fluid">
 		<h1 class="title">Welcome to the IBP Support website</h1>
 		<h3 class="description">Site is in development phase..</h3> 
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-custom">
 			<div class="container-fluid">
 				<div class="navbar-header">
 				<a class="navbar-brand" href="#">No logo</a>
