--- a/public/angular/views/submitForm.html
+++ b/public/angular/views/submitForm.html
@@ -1,6 +1,5 @@
-<div class="row">
-    <div class="col-md-8">
-
+<div class="row backgroundStyle">
+    <div class="col-md-8 center-block">
         <form id="newTicketForm" class="form-horizontal" name="newTicketForm" role="form" novalidate>
             <label class="col-md-4 control-label">
             </label>
@@ -9,12 +8,13 @@
             </div>
             <!-- TYPE -->
             <div class="form-group">
-                <label for="ticketType" class="col-md-4 control-label">
+            <label for="ticketType" class="col-md-4 control-label">
                     Please select type:
                 </label>
                 <div class="col-md-8">
-                    <select id="ticketType" name="typeSelectField" class="form-control" ng-model="newTicket.ticketType" required>
-                        <option value="typeA" selected>typeA</option>
+                    <select id="ticketType" name="typeSelectField" class="form-control" ng-model="newTicket.ticketType" required>  
+                        <option value ="" disabled selected>type0 &#8964;</span></option>
+                        <option value="typeA">typeA</option>
                         <option value="typeB">typeB</option>
                         <option value="typeC">typeC</option>
                     </select>
@@ -28,6 +28,7 @@
                 </label>
                 <div class="col-md-8">
                     <select id="ticketPriority" name="prioritySelectField" class="form-control" ng-model="newTicket.ticketPriority" required>
+                        <option value ="" disabled selected>neutral &#8964;<span </span></option>
                         <option value="normal" selected>normal</option>
                         <option value="important">important</option>
                         <option value="urgent">urgent</option>
@@ -42,6 +43,7 @@
                 </label>
                 <div class="col-md-8">
                     <select id="application" name="applicationSelectField" class="form-control" ng-model="newTicket.application" required>
+                        <option value ="" class = "line1" disabled selected>app0 &#8964;</option>                       
                         <option value="appA" selected>appA</option>
                         <option value="appB">appB</option>
                         <option value="appC">appC</option>
@@ -56,6 +58,7 @@
                 </label>
                 <div class="col-md-8">
                     <select id="region" name="regionSelectField" class="form-control" ng-model="newTicket.region" required>
+                        <option value ="" disabled selected>Region 0 &#8964;</option>
                         <option value="regionA" selected>Region A</option>
                         <option value="regionB">Region B</option>
                         <option value="regionC">Region C</option>
@@ -69,7 +72,7 @@
                     First Name:
                 </label>
                 <div class="col-md-8">
-                    <input type="text" id="firstName" name="firstNameField" class="form-control" ng-model="newTicket.firstName" ng-model-options="{ updateOn: 'blur' }" required/>
+                    <input type="text" id="firstName" placeholder="Vardenis" name="firstNameField" class="form-control inputStyle" ng-model="newTicket.firstName" ng-model-options="{ updateOn: 'blur' }" required/>
                     <span ng-show="newTicketForm.firstNameField.$touched && newTicketForm.firstNameField.$invalid">First name is required.</span>
                 </div>
             </div>
@@ -79,7 +82,7 @@
                     Last Name:
                 </label>
                 <div class="col-md-8">
-                    <input type="text" id="lastName" name="lastNameField" class="form-control" ng-model="newTicket.lastName" ng-model-options="{ updateOn: 'blur' }" required/>
+                    <input type="text" id="lastName" placeholder="Pavardenis" name="lastNameField" class="form-control inputStyle" ng-model="newTicket.lastName" ng-model-options="{ updateOn: 'blur' }" required/>
                     <span ng-show="newTicketForm.lastNameField.$touched && newTicketForm.lastNameField.$invalid">Last name is required.</span>
                 </div>
             </div>
@@ -89,7 +92,7 @@
                     Your e-mail:
                 </label>
                 <div class="col-md-8">
-                    <input type="email" id="email" name="emailField" class="form-control" ng-model="newTicket.email" ng-model-options="{ updateOn: 'blur' }" required/>
+                    <input type="email" id="email" placeholder="emailaddress@gmail.com" emailField" class="form-control inputStyle" ng-model="newTicket.email" ng-model-options="{ updateOn: 'blur' }" required/>
                     <span ng-show="newTicketForm.emailField.$touched && newTicketForm.emailField.$pristine">E-mail address is required.</span>
                     <span ng-show="newTicketForm.emailField.$dirty && newTicketForm.emailField.$invalid">E-mail address is invalid.</span>
                 </div>
@@ -100,23 +103,26 @@
                     Please describe your question:
                 </label>
                 <div class="col-md-8">
-                    <textarea rows="3" id="question" name="questionField" class="form-control" ng-model="newTicket.question" required/>
+                    <textarea rows="1" id="question" placeholder="Please describe your question" questionField" class="form-control inputStyle" ng-model="newTicket.question" required/>
                     <span ng-show="newTicketForm.questionField.$touched && newTicketForm.questionField.$invalid">Question is required.</span>
                 </div>
             </div>
             <div class="form-group">
-                <label for="file" class="col-md-4 control-label">
+                <label  class="col-md-4 control-label">
                     Please attach evidence or supplement material:
                 </label>
-                <div class="col-md-8">
-                    <input type="file" id="file" file-model="newTicketFile"/>
+                <div class="btn">
+                    <label for="file" class="custom-upload">
+                     <input type="file" id="file" file-model="newTicketFile"/>
+                    Upload
+                    </label>
                 </div>
             </div>
             <div class="form-group">
                 <label for="button" class="col-md-4 control-label">
                 </label>
                 <div class="col-md-8">
-                    <button class="btn btn-primary" 
+                    <button class="btn submitBtn" 
                     ng-disabled="newTicketForm.$invalid"
                     ng-click="submitForm()">
                     Submit
@@ -126,10 +132,12 @@
                 </div>
             </div>
         </form>
+        <div class="testFileSub">
         <button class="btn btn-primary" ng-click="submitForm()"> Test file submition </button>
                     <p> Form status </p>
                     <p> submitted : {{newTicketForm.$submitted}} </p>
                     <p> valid : {{newTicketForm.$valid}} </p>
-                    <p> pristine : {{newTicketForm.$pristine}} </p>
+                    <p> pristine : {{newTicketForm.$pristine}} </p>  
+        </div>          
     </div>
 </div>
