--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,15 +1,34 @@
 body,html {
-	background-color: #3b4b54;
+    background-color: #C7C7C7;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light",
 		"Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	color: #ffffff;
     height: 100%;
 }
-
 /* header footer common */
 header, footer {
-    background-color: #26343F;
+    background-color: #959595;
+    /*background-color: #26343F;*/
 	color: #ffffff;
+}
+.navbar-custom{
+    background-color: #959595;
+}
+.navbar-custom a{
+    color: #000;
+}
+.navbar-custom li a:hover{
+    background-color: transparent;
+    border-bottom: 4px solid #4178BE;
+}
+.navbar-custom li a:focus{
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: #4178BE;
+}
+.navbar-custom li a:visited{
+    background-color: transparent;
 }
 /* colors */
 .description {
