--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
 
 	<!--UI Bootstrap library-->
 	<script type="text/javascript" src="angular/modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
-	<script type="text/javascript" src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.3.js"></script>
+		<script type="text/javascript" src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.3.js"></script>
 
 	<!-- Angular Material Library -->
 	<!--<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>-->
@@ -42,7 +42,7 @@
 	<header class="container-fluid">
 		<h1 class="title">Welcome to the IBP Support website</h1>
 		<h3 class="description">Site is in development phase..</h3> 
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-custom">
 			<div class="container-fluid">
 				<div class="navbar-header">
 				<a class="navbar-brand" href="#">No logo</a>
