Move to Q&A action

--- a/public/angular/views/ticketsBoard.html
+++ b/public/angular/views/ticketsBoard.html
@@ -117,7 +117,7 @@
                         </label>
                     </div>
                     <div class="col-sm-2">
-                        <button type="button" class="btn btn-success"> Move to Q&A </button>
+                        <button type="button" class="btn btn-success" ng-click="moveToQnA(ticket.data.id)"> Move to Q&A </button>
                     </div>
                 </div>
             </div>
