--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,5 @@
 body,html {
-    background-color: #C7C7C7;
+    background-color: #f4f4f4;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light",
 		"Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	color: #ffffff;
@@ -11,8 +11,16 @@ header, footer {
     /*background-color: #26343F;*/
 	color: #ffffff;
 }
+.headerStyle{
+    background-color: #ffffff;
+}
+#menuBtn{
+    background-color: transparent;
+}
 .navbar-custom{
-    background-color: #959595;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 0px;
 }
 .navbar-custom a{
     color: #000;
@@ -34,9 +42,57 @@ header, footer {
 .description {
 	color: #41D6C3;
 }
-footer {
-  /*position: absolute;*/
-  float:bottom;
-  /*bottom: 0;*/
-  width: 100%;
+
+.byNode{
+    padding: 25px;
+}
+.footerStyle{
+    background-color: #ffffff;
+    width: 100%;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    max-height: 20% !important;
+    color: black;
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: black;
+}
+
+/*To keep navbar collapsed on most screens*/
+@media (max-width: 2000px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
 }
