--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-
+						<img src="../images/ibm-design-icons-user/user_32.png" class="pull-right userStyle"/>
 						<a class="navbar-brand" href="#">No logo</a>
 					</div>
 					<div class="collapse navbar-collapse nav-collapse"> 	
