--- a/public/angular/views/frontPage.html
+++ b/public/angular/views/frontPage.html
@@ -31,7 +31,7 @@
             <div
                 class="searchBtn pull-right"
                 ng-click="search(question)">
-                Submit <span class= "searchPadding"><img src="../images/ibm-design-icons-forward/forward_32.png"></span>
+                Submit <span class= "searchPadding"><img src="../images/ibm-design-icons-forward/forward_32_blue.png"></span>
             </div>
         </div>
     </div>
@@ -66,7 +66,12 @@
     <div class="col-md-12">
    <!-- <h3>{{ allAnswers.length }} answers:</h3>-->
         <div class="col-md-4" ng-repeat="answer in allAnswers">
-            <p class="answers"><span class="answerLabel "> Answer # {{ $index + 1}}: </span> {{ answer.answer[0] }}</p>
+            <p class="answers"><span class="answerLabel "> Answer # {{ $index + 1}}: </span> {{ answer.answer[0] }}
+            </p>
+            <p class="readMore">
+                  <button class="readMoreBtn" ng-click="readMore()">Read more..</button>
+            </p>
+           
         </div>
     </div>
 </div>
